# ppt-master

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT_CN.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  GEMINI.md  INIT.md  README.md  README.tr-TR.md  README.zh-CN.md  README_CN.md  README_EN.md  SPONSORING.md  SPONSORING_CN.md  build_adapters.py  index.html  pyproject.toml  requirements.txt  viewer.html
skills/ppt-master/: .env.example  SKILL.md  SPONSORS.md  SPONSORS_CN.md  pyproject.toml  requirements.txt
skills/ppt-master/references/: animations.md  artifact-ownership.md  build-slides-spec.md  canvas-formats.md  design-guidelines.md  executor-base.md  executor-chart.md  executor-consultant-top.md  executor-consultant.md  executor-general.md  executor-image.md  executor-notes.md  executor-structured.md  image-base.md  image-generator.md  image-layout-patterns.md  image-layout-spec.md  image-searcher.md  native-data-interface.md  native-diagrams.md  native-shape-authoring.md  optimizer-crap.md  pptx-structure-interface.md  quality-gates.md  semantic-svg.md  shared-standards-core.md  shared-standards.md  strategist-image.md  strategist-template.md  strategist.md  svg-image-embedding.md  template-designer.md  type-scale.md  user-medical-ppt-preferences.md  visual-guidance-layers.md  visual-review.md
skills/ppt-master/scripts/: README.md  _shared.py  analysis_library.py  analysis_pack.py  analyze_images.py  animation_config.py  backend_gemini.py  backend_openai.py  batch_validate.py  beautify_identity.py  beautify_inventory.py  build_contact_sheets.py  build_diagram_index.py  chart_recall.py  check_annotations.py  check_deps_sync.py  compact_svg_coordinates.py  config.py  export_qa.py  (+72 more)
(+903 files in other folders)
