[project]
name = "ppt-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "curl-cffi>=0.7.0",
    "ebooklib>=0.18",
    "google-genai>=1.0.0",
    "mammoth>=1.6.0",
    "markdownify>=0.11.6",
    "nbconvert>=7.0.0",
    "numpy>=1.20.0",
    "openai>=1.0.0",
    "pillow>=9.0.0",
    "pymupdf>=1.23.0",
    "python-pptx>=0.6.21",
    "reportlab>=4.0.0",
    "requests>=2.31.0",
    "svglib>=1.5.0",
]
